added async option for mass update